Add Google OAuth2 login and email to Usuario model
Integrated Google OAuth2 login using spring-boot-starter-oauth2-client and added configuration for client credentials.
Introduced CustomAuthentication and CustomAuthenticationProvider for custom authentication logic. Added LoginSocialSuccessHandler to handle social login success, creating users if they don't exist.
Updated Usuario model, DTO, repository, and service to support email field.
Modified login page to include Google login option.

--- a/library-api/src/main/resources/templates/login.html
+++ b/library-api/src/main/resources/templates/login.html
@@ -42,8 +42,10 @@
             <label for="senha" class="form-label text-dark">Senha</label>
             <input type="password" class="form-control" id="senha" name="password" placeholder="Digite sua senha">
         </div>
-        <button type="submit" class="btn btn-green w-100">Entrar</button>
+        <button type="submit" class="btn btn-green w-100"><strong>Entrar</strong></button>
     </form>
+    <hr />
+    <a th:href="@{/oauth2/authorization/google}" class="btn btn-green w-100">Entrar com <strong>Google</strong></a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
